앨범 생성을 위한 로직 작성 및 테스트 코드 작성